# DarwinsBox

./: .gitignore  .gitmodules  .tool-versions  .travis.yml  README.md  WORKSPACE  classpathModules.cache  dag.bazel  index.html  nb-configuration.xml  params.json  pom.xml  pom.xml.releaseBackup  release.properties  third_party.bzl
AnnotationsProcessing/: BUILD.bazel  MANIFEST.MF  pom.xml
AnnotationsProcessing/src/main/java/darwin/annotations/: CheckModus.java  MultiServiceProvider.java  ProviderGroup.java  ServiceProcessor.java  ServiceProvider.java
BuildTools/: pom.xml  (+1 more)
Core/: BUILD.bazel  MANIFEST.MF  pom.xml  pom.xml.releaseBackup
Core/src/main/java/darwin/core/controls/: InputController.java  ViewListener.java  ViewModel.java  WorldModel.java
Core/src/main/java/darwin/core/dependencies/: CoreModul.java
Core/src/main/java/darwin/core/gui/: Client.java  ClientApplet.java  ClientWindow.java  ColorLUTPanel.java  FloatShifter.java  FloatValueListener.java  HistogrammPanel.java  ImageFrame.java  InfoFrame.java  InfoPanel.java  ShutdownListener.java
Core/src/main/java/darwin/core/logging/: ExceptionHandler.java  JavaScripAppender.java  JavaScriptLogger.java  Log4JLogger.java
Core/src/main/java/darwin/core/timing/: DeltaListener.java  GameTickListener.java  GameTime.java  GameTimeListener.java  HighPerformanceTimingFix.java  StepListener.java  StepListenerManager.java  TickDeltaListener.java  TickListener.java  TickListenerManager.java  TimeListener.java
Geometrie/: BUILD.bazel  MANIFEST.MF  pom.xml
Geometrie/src/main/java/darwin/geometrie/data/: AttributException.java  DataAttribut.java  DataLayout.java  DataType.java  Element.java  GenericVector.java  VectorType.java  Vertex.java  VertexBuffer.java
Geometrie/src/main/java/darwin/geometrie/factorys/: PathTriangulator.java  PerCellFiller.java  PerVertexFiller.java  Quad.java
Geometrie/src/main/java/darwin/geometrie/io/: CtmModelReader.java  CtmModelWriter.java  ModelLoader.java  ModelLoaderProvider.java  ModelReader.java  ModelWriter.java  PlainJSONModelWriter.java  Propertie.java  ResourcesLoader.java  WrongFileTypeException.java
Geometrie/src/main/resources/resources/models/: arrow.json  axis.json  rahmen.json  screenquad.json
Renderer/: BUILD.bazel  MANIFEST.MF  nb-configuration.xml  nbactions.xml  pom.xml  pom.xml.releaseBackup
Renderer/src/main/java/darwin/renderer/: BasicScene.java  DeferredScene.java  GraphicContext.java
Renderer/src/main/java/darwin/resourcehandling/: ResourceHandle.java  ResourceRepository.java  ResourceState.java
Renderer/src/main/resources/resources/brdfs/: f_schlick_f0.brdf
Renderer/src/main/resources/resources/shaders/: Empty.frag  Empty.vert  Grid.frag  Grid.vert  Hud.vert  Phong.frag  Phong.vert  Simple.frag  Water.frag  Water.vert
Renderer/src/main/scala/darwin/renderer/: Bindable.scala  GraphicComponent.scala  TextureComponent.scala
ResourceHandling/: BUILD.bazel  MANIFEST.MF  README.md  pom.xml
ResourceHandling/src/main/java/darwin/resourcehandling/: Resource.java  ResourceBuilder.java  ResourceChangeListener.java  ResourceDependecyInspector.java  ResourceHandle.java  ResourceListener.java  ResourceProcessor.java  ResourceRepository.java  ResourceState.java  ResourceTupel.java  Resources.scala  UsedResourceProcessor.java  WrongBuildArgsException.java
ResourceHandling/src/main/scala/darwin/resourcehandling/: Resources.scala
Util/: BUILD.bazel  MANIFEST.MF  README.md  pom.xml
Util/src/main/scala/darwin/util/: Tag.scala
(+594 files in other folders)
