package(default_visibility = ["//visibility:public"])

java_library(
    name = "main_dependencies",
    runtime_deps = [
        "//AnnotationsProcessing/src/main/resources:resources"
    ],
)
     


java_library(
    name = "tests_dependencies",
    testonly = 1,
    exports = [
        "main_dependencies"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
