package(default_visibility = ["//visibility:public"])

java_library(
    name = "main_dependencies",
    exports = [
        "//AnnotationsProcessing:main_dependencies",
        "//Geometrie:main_dependencies",
        "//ResourceHandling:main_dependencies",
        "//Util:main_dependencies",
        "@com_google_code_findbugs_jsr305",
        "@com_google_guava_guava",
        "@com_google_inject_extensions_guice_assistedinject",
        "@org_jogamp_gluegen_gluegen_rt_main",
        "@org_jogamp_jogl_jogl_all_main"
    ],
    runtime_deps = [
        "//Renderer/src/main/resources:resources"
    ],
)
     


java_library(
    name = "tests_dependencies",
    testonly = 1,
    exports = [
        "main_dependencies"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
