package(default_visibility = ["//visibility:public"])

java_library(
    name = "main_dependencies",
    exports = [
        "//AnnotationsProcessing:main_dependencies",
        "//Util:main_dependencies",
        "@com_google_guava_guava",
        "@com_google_inject_extensions_guice_assistedinject"
    ],
)
     


java_library(
    name = "tests_dependencies",
    testonly = 1,
    exports = [
        "main_dependencies"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
